# NPD

./: NDP_lab2.py  NDP_lab3.py  NDP_lab4.sh  NPD_lab1.py  NPD_lab10.py  NPD_lab11.ipynb  NPD_lab6.py  NPD_lab6_additional.py  NPD_lab8.py  README.md  custom_dijkstra.txt  dijkstra.txt  homework3_2022_ws.ipynb  test_nbp.py
projekt/: README.md  pyproject.toml
projekt/results/: all_data.csv  filtered_data.csv
projekt/results/profiler/: graph.dot  profiler.pstats  profiler.txt
projekt/results/tables/: change_of_co2_emission.csv  co2_per_capita.csv  gdp_per_capita.csv
projekt/scripts/: calculations.py  main.py  prepare_data.py  visualize.py
projekt/src/package_npd_js/: calculations.py  main.py  prepare_data.py  visualize.py
projekt/tests/: test.py
